k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: eduk8s
  name: eduk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eduk8s
  template:
    metadata:
      labels:
        app: eduk8s
    spec:
      containers:
      - image: quay.io/jorgemoralespou/eduk8shub:latest
        imagePullPolicy: Always
        name: eduk8shub
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
